[gd_scene load_steps=12 format=3 uid="uid://ca0s6nwdkrvfw"]

[ext_resource type="Script" path="res://source/core/main_ui.gd" id="1_ka4x0"]
[ext_resource type="PackedScene" uid="uid://bdp78c0tt0nxf" path="res://source/map/map.tscn" id="2_ufxb3"]
[ext_resource type="PackedScene" uid="uid://dj0iyk8t13mtc" path="res://source/player/player.tscn" id="3_xjm8s"]
[ext_resource type="PackedScene" uid="uid://c2k61d5pgd0l5" path="res://source/core/aim_ui.tscn" id="4_cta50"]
[ext_resource type="PackedScene" uid="uid://bccth4htsbm6p" path="res://source/core/information_ui.tscn" id="4_rcc1l"]
[ext_resource type="Shader" path="res://assets/shaders/vignette.gdshader" id="5_sp8sp"]
[ext_resource type="PackedScene" uid="uid://b8b4msvg6dysm" path="res://source/core/processor_ui.tscn" id="6_hwevm"]
[ext_resource type="PackedScene" uid="uid://bwaupboxwraat" path="res://source/inventory/inventory_ui.tscn" id="6_jyt6k"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1238r"]

[sub_resource type="Environment" id="Environment_mdpnj"]
background_mode = 1
background_color = Color(0.0392157, 0.0392157, 0.0392157, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0tjyn"]
shader = ExtResource("5_sp8sp")
shader_parameter/size = 0.96
shader_parameter/smoothness = 1.0
shader_parameter/corner_strength = 25.0

[node name="MainUI" type="CanvasLayer"]
script = ExtResource("1_ka4x0")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Container" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
alignment = 1

[node name="Margin" type="MarginContainer" parent="Container"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 16
theme_override_constants/margin_bottom = 16

[node name="Canvas" type="Control" parent="Container/Margin"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ViewportContainer" type="SubViewportContainer" parent="Container/Margin/Canvas"]
texture_filter = 1
material = SubResource("ShaderMaterial_1238r")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
stretch = true

[node name="Viewport" type="SubViewport" parent="Container/Margin/Canvas/ViewportContainer"]
handle_input_locally = false
size = Vector2i(1152, 688)
render_target_update_mode = 4

[node name="Level" type="Node3D" parent="Container/Margin/Canvas/ViewportContainer/Viewport"]

[node name="World" type="WorldEnvironment" parent="Container/Margin/Canvas/ViewportContainer/Viewport/Level"]
environment = SubResource("Environment_mdpnj")

[node name="Map" parent="Container/Margin/Canvas/ViewportContainer/Viewport/Level" instance=ExtResource("2_ufxb3")]

[node name="Player" parent="Container/Margin/Canvas/ViewportContainer/Viewport/Level" instance=ExtResource("3_xjm8s")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.13575, 0)

[node name="Screen" type="Control" parent="Container/Margin/Canvas"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="AimUI" parent="Container/Margin/Canvas/Screen" instance=ExtResource("4_cta50")]
layout_mode = 1

[node name="ProcessorUI" parent="Container/Margin/Canvas/Screen" instance=ExtResource("6_hwevm")]
layout_mode = 1

[node name="InformationUI" parent="Container/Margin/Canvas/Screen" instance=ExtResource("4_rcc1l")]
layout_mode = 1

[node name="Vignette" type="ColorRect" parent="Container/Margin/Canvas"]
material = SubResource("ShaderMaterial_0tjyn")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.147672, 0.147672, 0.147672, 1)

[node name="SideBar" type="Control" parent="Container"]
clip_contents = true
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="Margin" type="MarginContainer" parent="Container/SideBar"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 16.0
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 32

[node name="InventoryUI" parent="Container/SideBar/Margin" instance=ExtResource("6_jyt6k")]
layout_mode = 2
